Added my two homework

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="index.js"></script>
+    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <ul class="socialLinks">
+        <li><a href="https://www.instagram.com/" class="link-item">Instagram</a></li>
+        <li><a href="https://www.facebook.com/" class="link-item">Facebook</a></li>
+        <li><a href="https://twitter.com/" class="link-item">Twitter</a></li>
+        <li><a href="https://www.instagram.com/" class="link-item">Instagram</a></li>
+        <li><a href="https://www.facebook.com/" class="link-item">Facebook</a></li>
+        <li><a href="https://mail.ru/" class="link-item">Mail.ru</a></li>
+        <li><a href="https://www.instagram.com/" class="link-item">Instagram</a></li>
+        <li><a href="https://www.facebook.com/" class="link-item">Facebook</a></li>
+        <li><a href="https://twitter.com/" class="link-item">Twitter</a></li>
+        <li><a href="https://www.facebook.com/" class="link-item">Facebook</a></li>
+    </ul>
+
+    <button ><span>Click me</span> for show message</button>
 </body>
 </html>
