--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Table and Buttons</title>
-    <script src="index.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <script defer src="index.js"></script>
 </head>
+
 <body>
-    <table id="myTable" border="1">
-        <tr>
-          <td>Ячейка</td>
-        </tr>
-    </table>
-      
-      <button id="addRowBtn">+ Добавить строку в конец</button>
-      <button id="addColumnBtn">+ Добавить столбец в конец</button>
-      <button id="deleteRowBtn">- Удалить строку с конца</button>
-      <button id="deleteColumnBtn">- Удалить столбец с конца</button>
+    <div class="gallery">
+        <div class="photo">
+            <img id="main-photo" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" alt="">
+        </div>
+        <div class="preview">
+            <ul>
+                <li>
+                    <a href="#photo-1">
+                        <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#photo-2">
+                        <img src="https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?cs=srgb&dl=pexels-pixabay-268533.jpg&fm=jpg"
+                            alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#photo-3">
+                        <img src="https://images.unsplash.com/photo-1541963463532-d68292c34b19?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80"
+                            alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#photo-4">
+                        <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aHVtYW58ZW58MHx8MHx8fDA%3D&w=1000&q=80"
+                            alt="">
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
 </body>
+
 </html>
