--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>API</title>
     <script src="index.js" defer></script>
-</head>
-<body>
-    <canvas width="480" height="320"></canvas>
-</body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <ul ></ul>
+    <button class="prevBtn">Prev</button>
+    <button class="nextBtn">Next</button>
+ 
+  </body>
 </html>
