Added tests and changed the function for negative numbers

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API</title>
-    <script src="index.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <ul ></ul>
-    <button class="prevBtn">Prev</button>
-    <button class="nextBtn">Next</button>
- 
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <!-- <script defer type="module" src="index.js"></script> -->
+    <script defer type="module" src="tests/math/sum.test.js"></script>
+</head>
+
+<body>
+</body>
+
 </html>
